docs: add docs for user controllers
